[gd_scene load_steps=11 format=2]

[ext_resource path="res://Game/Entity/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Game/Entity/Player/Mannequiny/Mannequiny.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/CursorManager/MoveCursor/MoveCursor.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Entity/Entity.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game/Entity/Component/PlayerComponent.gd" type="Script" id=5]
[ext_resource path="res://Game/Entity/Component/ConditionComponent.gd" type="Script" id=8]
[ext_resource path="res://UI/SpatialFollower.gd" type="Script" id=10]
[ext_resource path="res://UI/CharacterLabel/CharacterLabel.tscn" type="PackedScene" id=11]

[sub_resource type="CylinderShape" id=1]
radius = 1.1
height = 1.8

[sub_resource type="SphereShape" id=2]
radius = 1.5

[node name="Player" type="KinematicBody"]
input_ray_pickable = false
collision_layer = 2
collision_mask = 33
script = ExtResource( 1 )

[node name="Mannequiny" parent="." instance=ExtResource( 2 )]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0.150976 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.285209, 0, 0, 0, 1, 0, 0, 0, 0.277135, 0, 0.936, 0 )
shape = SubResource( 1 )

[node name="MoveCursor" parent="." instance=ExtResource( 3 )]
visible = false

[node name="AttackDelay" type="Timer" parent="."]
one_shot = true

[node name="Entity" parent="." instance=ExtResource( 4 )]
id = 1

[node name="PlayerComponent" type="Node" parent="Entity/Components" index="0"]
script = ExtResource( 5 )
player_name = "rocket"
guild_name = "LTU"
account_id = 1
player_bestia_id = 1

[node name="ConditionComponent" type="Node" parent="Entity/Components" index="1"]
script = ExtResource( 8 )
max_health = 100
cur_health = 90
max_mana = 120
cur_mana = 100
max_stamina = 100
cur_stamina = 100

[node name="CollisionShape" type="CollisionShape" parent="Entity/ClickBody" index="0"]
transform = Transform( 0.539931, 0, 0, 0, 1, 1.06581e-14, 0, -5.79177e-15, 0.543415, 0, 0.93633, 0 )
shape = SubResource( 1 )

[node name="Listener" type="Listener" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.66973, 0 )
current = true

[node name="InteractionRange" type="Area" parent="."]
collision_layer = 0
collision_mask = 524288

[node name="CollisionShape" type="CollisionShape" parent="InteractionRange"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.883215, 0 )
shape = SubResource( 2 )

[node name="NameFollower" type="Control" parent="."]
margin_right = 126.0
margin_bottom = 40.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
follow_node = NodePath("..")

[node name="CharacterLabel" parent="NameFollower" instance=ExtResource( 11 )]
visible = false
margin_left = -54.7369
margin_top = 29.4737
margin_right = 54.2631
margin_bottom = 63.4737
[connection signal="timeout" from="AttackDelay" to="." method="_on_AttackDelay_timeout"]
[connection signal="component_updated" from="Entity" to="." method="_on_Entity_component_updated"]
[connection signal="mouse_entered" from="Entity" to="." method="_on_Entity_mouse_entered"]
[connection signal="mouse_exited" from="Entity" to="." method="_on_Entity_mouse_exited"]
[connection signal="body_entered" from="InteractionRange" to="." method="_on_InteractionRange_body_entered"]

[editable path="Entity"]
